--- a/index.html
+++ b/index.html
@@ -22,215 +22,212 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1 id="go-to-main" class="heading">MaNgo
-            Marketplace
-        </h1>
-        <div class="heading__secondary">
-            <img class="logo" src="./img/logo.jpg" alt="">
 
-            <form action="#" class="search">
-                <input type="text" class="search__input" placeholder="Search Engine">
-                <button class="search__button">
-                    <svg class="search__icon">
-                        <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
-                    </svg>
+    <h1 id="go-to-main" class="heading">MaNgo
+        Marketplace
+    </h1>
+    <div class="heading__secondary">
+        <img class="logo" src="./img/logo.jpg" alt="">
+
+        <form action="#" class="search">
+            <input type="text" class="search__input" placeholder="Search Engine">
+            <button class="search__button">
+                <svg class="search__icon">
+                    <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+                </svg>
+            </button>
+            <!-- <p class="logo__text">Welcome to our cash and carry. You can <strong>Buy as well as order</strong> each & -->
+            <!-- evertything from here.</p> -->
+        </form>
+
+
+        <nav class="user-nav">
+            <div class="user-nav__icon-box">
+                <svg class="user-nav__icon">
+                    <use xlink:href="img/sprite.svg#icon-chat"></use>
+                </svg>
+                <span class="user-nav__notification">37+</span>
+            </div>
+
+            <div class="user-nav__icon-box">
+                <svg class="user-nav__icon">
+                    <use xlink:href="img/sprite.svg#icon-cart"></use>
+                </svg>
+                <span class="user-nav__notification">5+</span>
+            </div>
+
+            <div class="user-nav__user">
+                <img src="img/user.jpg" alt="User Photo" class="user-nav__user-photo">
+                <span class="user-nav__user-name">Ahmad</span>
+            </div>
+
+
+
+
+        </nav>
+        <!-- <input class="heading__search" type="text" placeholder="search" name="" id=""> -->
+    </div>
+
+    <div class="content">
+        <nav class="sidebar">
+            <ul class="side-nav">
+                <li class="side-nav__item side-nav__item--active">
+                    <a href="#login-here" class="side-nav__link">
+                        <svg class="side-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-user"></use>
+                        </svg>
+                        <span>Login here</span>
+                    </a>
+                </li>
+                <li class="side-nav__item">
+                    <a href="#popup" class="side-nav__link">
+                        <svg class="side-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-registration"></use>
+                        </svg>
+                        <span>Registration</span>
+                    </a>
+                </li>
+                <li class="side-nav__item">
+                    <a href="#" class="side-nav__link">
+                        <svg class="side-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-product"></use>
+                        </svg>
+                        <span>Product Page</span>
+                    </a>
+                </li>
+                <li class="side-nav__item">
+                    <a href="/Contact.html" class="side-nav__link">
+                        <svg class="side-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-contact"></use>
+                        </svg>
+                        <span>Contact Me</span>
+                    </a>
+                </li>
+
+            </ul>
+
+            <div class="l">
+                <div class="l-copyright  ">
+                    .Copyright &copy; 2023 by <a href="#" class="l__link">Ahmad</a> All Rights are reserverd.
+                </div>
+            </div>
+        </nav>
+
+        <main class="view">
+            <div class="back-view">
+                <figure class="back-view__item">
+                    <img src="img/shopping-2.jpeg" alt="shopping 1" class="back-view__photo">
+                </figure>
+            </div>
+        </main>
+
+    </div>
+
+
+    <section class="section-login"> <!--section-home   0-->
+        <div class="page-view"> <!--  0 -->
+            <div class="home-page"> <!--home-page   0-->
+                <div class="home-page__form"> <!--home    0-->
+                    <form action="#" class="form">
+                        <div class="  u-margin-bottom-medium  ">
+                            <h1 class="heading-login">Login here</h1>
+                        </div>
+
+                        <div class="l-1">
+                            <strong> First <a href="#popup">Register</a> Yourself </strong>
+                        </div>
+
+                        <div class="form__group">
+                            <input id="login-here" type="text" class="form__input" placeholder="Full Name" required>
+                            <label for="name" class="form__label">User Name</label>
+                        </div>
+                        <div class="form__group">
+                            <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                            <label for="email" class="form__label">Email address</label>
+                        </div>
+                        <div class="form__group">
+                            <input type="password" class="form__input" placeholder="Your Password" id="password"
+                                required>
+                            <label for="password" class="form__label">Password</label>
+                        </div>
+
+                        <div class="form__group">
+                            <button href="go-to-main" class="btn btn--login">Login &rarr; </button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <div class="popup" id="popup">
+        <div class="popup__content">
+
+            <div class="form__groupp">
+                <h1 class="heading-login">Register yourself here</h1>
+
+                <h3 class="l-1"><em>Login Information</em></h3>
+
+                <input id="login-here" type="text" class="form__inputt" placeholder="Full Name" id="name" required>
+                <label for="name" class="form__labell">User Name</label>
+
+                <input type="email" class="form__inputt" placeholder="Email address" id="email" required>
+                <label for="email" class="form__labell">Email address</label>
+
+                <input type="password" class="form__inputt" placeholder="Your Password" id="password" required>
+                <label for="password" class="form__labell">Password</label>
+
+                <button href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Login &rarr;
                 </button>
-                <!-- <p class="logo__text">Welcome to our cash and carry. You can <strong>Buy as well as order</strong> each & -->
-                <!-- evertything from here.</p> -->
-            </form>
-
-
-            <nav class="user-nav">
-                <div class="user-nav__icon-box">
-                    <svg class="user-nav__icon">
-                        <use xlink:href="img/sprite.svg#icon-chat"></use>
-                    </svg>
-                    <span class="user-nav__notification">37+</span>
-                </div>
-
-                <div class="user-nav__icon-box">
-                    <svg class="user-nav__icon">
-                        <use xlink:href="img/sprite.svg#icon-cart"></use>
-                    </svg>
-                    <span class="user-nav__notification">5+</span>
-                </div>
-
-                <div class="user-nav__user">
-                    <img src="img/user.jpg" alt="User Photo" class="user-nav__user-photo">
-                    <span class="user-nav__user-name">Ahmad</span>
-                </div>
-
-
-
-
-            </nav>
-            <!-- <input class="heading__search" type="text" placeholder="search" name="" id=""> -->
-        </div>
-
-        <div class="content">
-            <nav class="sidebar">
-                <ul class="side-nav">
-                    <li class="side-nav__item side-nav__item--active">
-                        <a href="#login-here" class="side-nav__link">
-                            <svg class="side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-user"></use>
-                            </svg>
-                            <span>Login here</span>
-                        </a>
-                    </li>
-                    <li class="side-nav__item">
-                        <a href="#popup" class="side-nav__link">
-                            <svg class="side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-registration"></use>
-                            </svg>
-                            <span>Registration</span>
-                        </a>
-                    </li>
-                    <li class="side-nav__item">
-                        <a href="#" class="side-nav__link">
-                            <svg class="side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-product"></use>
-                            </svg>
-                            <span>Product Page</span>
-                        </a>
-                    </li>
-                    <li class="side-nav__item">
-                        <a href="#" class="side-nav__link">
-                            <svg class="side-nav__icon">
-                                <use xlink:href="img/sprite.svg#icon-contact"></use>
-                            </svg>
-                            <span>Contact Me</span>
-                        </a>
-                    </li>
-
-                </ul>
-
-                <div class="l">
-                    <div class="l-copyright  ">
-                        .Copyright &copy; 2023 by <a href="#" class="l__link">Ahmad</a> All Rights are reserverd.
-                    </div>
-                </div>
-            </nav>
-
-            <main class="view">
-                <div class="back-view">
-                    <figure class="back-view__item">
-                        <img src="img/shopping-2.jpeg" alt="shopping 1" class="back-view__photo">
-                    </figure>
-                </div>
-            </main>
-
-        </div>
-
-
-        <section class="section-login"> <!--section-home   0-->
-            <div class="page-view"> <!--  0 -->
-                <div class="home-page"> <!--home-page   0-->
-                    <div class="home-page__form"> <!--home    0-->
-                        <form action="#" class="form">
-                            <div class="  u-margin-bottom-medium  ">
-                                <h1 class="heading-login">Login here</h1>
-                            </div>
-
-                            <div class="l-1">
-                                <strong> First <a href="#go-to-main">Register</a> Yourself </strong>
-                            </div>
-
-                            <div class="form__group">
-                                <input id="login-here" type="text" class="form__input" placeholder="Full Name" id="name"
-                                    required>
-                                <label for="name" class="form__label">User Name</label>
-                            </div>
-                            <div class="form__group">
-                                <input type="email" class="form__input" placeholder="Email address" id="email" required>
-                                <label for="email" class="form__label">Email address</label>
-                            </div>
-                            <div class="form__group">
-                                <input type="password" class="form__input" placeholder="Your Password" id="password"
-                                    required>
-                                <label for="password" class="form__label">Password</label>
-                            </div>
-
-                            <div class="form__group">
-                                <button href="go-to-main" class="btn btn--login">Login &rarr; </button>
-                            </div>
-
-                        </form>
-                    </div>
-                </div>
             </div>
-        </section>
 
+            <div class="form__groupp">
+                <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
+                <input id="login-here" type="text" class="form__inputt" placeholder="Full Name" id="name" required>
+                <label for="name" class="form__labell">User Name</label>
 
-        <div class="popup" id="popup">
-            <div class="popup__content">
+                <div class=" form__group form__radio-group">
+                    <input type="radio" class="form__radio-input" id="small" name="size">
+                    <label for="small" class="form__radio-label">
+                        <span class="form__radio-button"></span>
+                        Small tour group</label>
 
-                <div class="form__groupp">
-                    <h1 class="heading-login">Register yourself here</h1>
-
-                    <h3 class="l-1"><em>Login Information</em></h3>
-
-                    <input id="login-here" type="text" class="form__inputt" placeholder="Full Name" id="name" required>
-                    <label for="name" class="form__labell">User Name</label>
-
-                    <input type="email" class="form__inputt" placeholder="Email address" id="email" required>
-                    <label for="email" class="form__labell">Email address</label>
-
-                    <input type="password" class="form__inputt" placeholder="Your Password" id="password" required>
-                    <label for="password" class="form__labell">Password</label>
-
-                    <button href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Login &rarr;
-                    </button>
+                    <input type="radio" class="form__radio-input" id="large" name="size">
+                    <label for="large" class="form__radio-label">
+                        <span class="form__radio-button"></span>
+                        Large tour group</label>
                 </div>
 
-                <div class="form__groupp">
-                    <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
-                    <input id="login-here" type="text" class="form__inputt" placeholder="Full Name" id="name" required>
-                    <label for="name" class="form__labell">User Name</label>
+                <input id="login-here" type="type" class="form__inputt" placeholder="Current City" id="name" required>
+                <label for="name" class="form__labell">Current City</label>
 
-                    <div class=" form__group form__radio-group">
-                        <input type="radio" class="form__radio-input" id="small" name="size">
-                        <label for="small" class="form__radio-label">
-                            <span class="form__radio-button"></span>
-                            Small tour group</label>
-
-                        <input type="radio" class="form__radio-input" id="large" name="size">
-                        <label for="large" class="form__radio-label">
-                            <span class="form__radio-button"></span>
-                            Large tour group</label>
-                    </div>
-
-                    <input id="login-here" type="type" class="form__inputt" placeholder="Current City" id="name"
-                        required>
-                    <label for="name" class="form__labell">Current City</label>
-
-                    <input id="login-here" type="type" class="form__inputt" placeholder="Complete Address" id="name"
-                        required>
-                    <label for="name" class="form__labell">Complete Address</label>
-                </div>
-
-
-                <div class="form__groupp">
-                    <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
-
-
-                    <input id="login-here" type="type" class="form__inputt"
-                        placeholder="Your Order will be Delivered on that Address" id="name" required>
-                    <label for="name" class="form__labell">Address</label>
-
-                    <input id="login-here" type="type" class="form__inputt" placeholder="City" id="name" required>
-                    <label for="name" class="form__labell">City</label>
-
-                    <input id="login-here" type="type" class="form__inputt" placeholder="Postal Code" id="name"
-                        required>
-                    <label for="name" class="form__labell">Postal Code</label>
-                </div>
-
-                <a href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Submit &rarr;
-                </a>
+                <input id="login-here" type="type" class="form__inputt" placeholder="Complete Address" id="name"
+                    required>
+                <label for="name" class="form__labell">Complete Address</label>
             </div>
+
+
+            <div class="form__groupp">
+                <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
+
+
+                <input id="login-here" type="type" class="form__inputt"
+                    placeholder="Your Order will be Delivered on that Address" id="name" required>
+                <label for="name" class="form__labell">Address</label>
+
+                <input id="login-here" type="type" class="form__inputt" placeholder="City" id="name" required>
+                <label for="name" class="form__labell">City</label>
+
+                <input id="login-here" type="type" class="form__inputt" placeholder="Postal Code" id="name" required>
+                <label for="name" class="form__labell">Postal Code</label>
+            </div>
+
+            <a href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Submit &rarr;
+            </a>
         </div>
+    </div>
     </div>
 
 
