--- a/Contact.html
+++ b/Contact.html
@@ -22,61 +22,75 @@
 </head>
 
 <body>
-    <div class="container ">
-        <!-- class .popup__content -->
+    <div class="container">
+        <div class="popup" >
+            <div class="popup__content">
 
-        <div class="  u-margin-bottom-medium  ">
-            <h1 class="heading-login">Contact Details</h1>
-        </div>
+                <div class="form__groupp">
+                    <h1 class="heading-login">Register yourself here</h1>
+
+                    <h3 class="l-1"><em>Login Information</em></h3>
+
+                    <input id="login-here" type="text" class="form__inputt" placeholder="Full Name" id="name" required>
+                    <label for="name" class="form__labell">User Name</label>
+
+                    <input type="email" class="form__inputt" placeholder="Email address" id="email" required>
+                    <label for="email" class="form__labell">Email address</label>
+
+                    <input type="password" class="form__inputt" placeholder="Your Password" id="password" required>
+                    <label for="password" class="form__labell">Password</label>
+
+                    <button href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Login &rarr;
+                    </button>
+                </div>
+
+                <div class="form__groupp">
+                    <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
+                    <input id="login-here" type="text" class="form__inputt" placeholder="Full Name" id="name" required>
+                    <label for="name" class="form__labell">User Name</label>
+
+                    <div class=" form__group form__radio-group">
+                        <input type="radio" class="form__radio-input" id="small" name="size">
+                        <label for="small" class="form__radio-label">
+                            <span class="form__radio-button"></span>
+                            Small tour group</label>
+
+                        <input type="radio" class="form__radio-input" id="large" name="size">
+                        <label for="large" class="form__radio-label">
+                            <span class="form__radio-button"></span>
+                            Large tour group</label>
+                    </div>
+
+                    <input id="login-here" type="type" class="form__inputt" placeholder="Current City" id="name"
+                        required>
+                    <label for="name" class="form__labell">Current City</label>
+
+                    <input id="login-here" type="type" class="form__inputt" placeholder="Complete Address" id="name"
+                        required>
+                    <label for="name" class="form__labell">Complete Address</label>
+                </div>
 
 
-        <div class="form__groupp">
-            <input type="text" class="form__inputt" placeholder="User Name" id="name">
-            <label for="name" class="form__labell">User Name</label>
+                <div class="form__groupp">
+                    <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
 
-            <input type="email" class="form__inputt" placeholder="Email address" id="email" required>
-            <label for="email" class="form__labell">Email address</label>
 
-            <input type="password" class="form__inputt" placeholder="Your Password" id="password" required>
-            <label for="password" class="form__labell">Password</label>
+                    <input id="login-here" type="type" class="form__inputt"
+                        placeholder="Your Order will be Delivered on that Address" id="name" required>
+                    <label for="name" class="form__labell">Address</label>
 
-            <div class=" form__group form__radio-group">
-                <input type="radio" class="form__radio-input" id="small" name="size">
-                <label for="small" class="form__radio-label">
-                    <span class="form__radio-button"></span>
-                    Small tour group</label>
+                    <input id="login-here" type="type" class="form__inputt" placeholder="City" id="name" required>
+                    <label for="name" class="form__labell">City</label>
 
-                <input type="radio" class="form__radio-input" id="large" name="size">
-                <label for="large" class="form__radio-label">
-                    <span class="form__radio-button"></span>
-                    Large tour group</label>
+                    <input id="login-here" type="type" class="form__inputt" placeholder="Postal Code" id="name"
+                        required>
+                    <label for="name" class="form__labell">Postal Code</label>
+                </div>
+
+                <a href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Submit &rarr;
+                </a>
             </div>
-
-            <input type="text" class="form__inputt" placeholder="Mobile Number" id="name">
-            <label for="name" class="form__labell">Mobile Number</label>
-
-            <input type="text" class="form__inputt" placeholder="Telephone Number" id="name">
-            <label for="name" class="form__labell">Telephone Number</label>
-
-
-            <input required type="url" class="form__inputt" placeholder="Please enter your Web Site address:" id="name">
-            <label for="name" class="form__labell">Your Web address</label>
-
-
         </div>
-
-
-        <div class="form__groupp">
-            <button href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Submit &rarr;
-            </button>
-        </div>
-        <div class="form__group">
-            <button><a href="/index.html" class=" btn  btn__registrationbtn btn--login">Back to Home Page &rarr; ></a>
-            </button>
-        </div>
-        <br>
-
-
     </div>
 
 </body>
