--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="Back to Home Page">Shopping Store</title>
+    <title id="Back to Home Page">MaNgo Marketplace</title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
@@ -215,6 +215,14 @@
                                 <div class="form__group">
                                     <button href="go-to-main" class="btn btn--login">Login &rarr; </button>
                                 </div>
+                                <li>
+                                    <a href="/index.html" class=" btn btn__icon  btn--login">Back to Home
+                                        <svg class="  side-nav__icon ">
+                                            <use xlink:href="img/sprite.svg#icon-contact"></use>
+                                        </svg>
+                                        &rarr;
+                                    </a>
+                                </li>
 
                             </form>
                         </div>
