--- a/Garments.html
+++ b/Garments.html
@@ -223,7 +223,7 @@
                     <li>
                         <a href="/Product.html" class=" btn btn__icon  btn--login">Back tu Product Page
                             <svg class="  side-nav__icon ">
-                                <use xlink:href="img/sprite.svg#icon-contact"></use>
+                                <use xlink:href="img/sprite.svg#icon-product"></use>
                             </svg>
                             &rarr;
                         </a>
@@ -232,7 +232,7 @@
                     <li>
                         <a href="/index.html" class=" btn btn__icon  btn--login">Back tu Home Page
                             <svg class="  side-nav__icon ">
-                                <use xlink:href="img/sprite.svg#icon-contact"></use>
+                                <use xlink:href="img/sprite.svg#icon-home"></use>
                             </svg>
                             &rarr;
                         </a>
