--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <main class="view">
                 <div class="back-view">
                     <figure class="back-view__item">
-                        <img src="img/shopping-2.jpeg" alt="shopping 1" class="back-view__photo">
+                        <img src="img/shopping-2.2.jpeg" alt="shopping 1" class="back-view__photo">
                     </figure>
                 </div>
             </main>
@@ -218,7 +218,7 @@
                                 <li>
                                     <a href="/index.html" class=" btn btn__icon  btn--login">Back to Home
                                         <svg class="  side-nav__icon ">
-                                            <use xlink:href="img/sprite.svg#icon-contact"></use>
+                                            <use xlink:href="img/sprite.svg#icon-home"></use>
                                         </svg>
                                         &rarr;
                                     </a>
@@ -230,97 +230,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- Registration  
-
-        <div class="popup" id="registration">
-            <div class="popup__content">
-
-                <div class="form__groupp">
-                    <h1 class="heading-login">Register yourself here</h1>
-
-                    <h3 class="l-1"><em>Login Information</em></h3>
-
-                    <input id="login-here" type="text" class="form__inputt" placeholder="Full Name" id="name" required>
-                    <label for="name" class="form__labell">User Name</label>
-
-                    <input type="email" class="form__inputt" placeholder="Email address" id="email" required>
-                    <label for="email" class="form__labell">Email address</label>
-
-                    <input type="password" class="form__inputt" placeholder="Your Password" id="password" required>
-                    <label for="password" class="form__labell">Password</label>
-
-                    <button href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Login &rarr;
-                    </button>
-                </div>
-
-                <div class="form__groupp">
-                    <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
-                    <input id="login-here" type="text" class="form__inputt" placeholder="Full Name" id="name" required>
-                    <label for="name" class="form__labell">User Name</label>
-
-                    <div class=" form__group form__radio-group">
-                        <input type="radio" class="form__radio-input" id="small" name="size">
-                        <label for="small" class="form__radio-label">
-                            <span class="form__radio-button"></span>
-                            Small tour group</label>
-
-                        <input type="radio" class="form__radio-input" id="large" name="size">
-                        <label for="large" class="form__radio-label">
-                            <span class="form__radio-button"></span>
-                            Large tour group</label>
-                    </div>
-
-                    <input id="login-here" type="type" class="form__inputt" placeholder="Current City" id="name"
-                        required>
-                    <label for="name" class="form__labell">Current City</label>
-
-                    <input id="login-here" type="type" class="form__inputt" placeholder="Complete Address" id="name"
-                        required>
-                    <label for="name" class="form__labell">Complete Address</label>
-                </div>
-
-
-                <div class="form__groupp">
-                    <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
-
-
-                    <input id="login-here" type="type" class="form__inputt"
-                        placeholder="Your Order will be Delivered on that Address" id="name" required>
-                    <label for="name" class="form__labell">Address</label>
-
-                    <input id="login-here" type="type" class="form__inputt" placeholder="City" id="name" required>
-                    <label for="name" class="form__labell">City</label>
-
-                    <input id="login-here" type="type" class="form__inputt" placeholder="Postal Code" id="name"
-                        required>
-                    <label for="name" class="form__labell">Postal Code</label>
-                </div>
-
-                <a href="#go-to-main" class=" btn  btn__registrationbtn btn--login">Submit &rarr;
-                </a>
-            </div>
-        </div>-->
-
-        <a href="/Product.html">
-            product pagee
-        </a>
-
-
-    </div>
-    <div class="footer">
-        <h1>hello About</h1>
-
-    </div>
-
-
-
-    <!-- <a href="./Contact.html">Contact Me</a><br><br>
-    <a href="./Login.html"> Login here </a> <br> <br>
-    <a href="./Registration.html">Registration</a> <br><br>
-    <a href="./Product.html"> Product Page</a> -->
-
-
     </div>
 </body>
 
