--- a/Electronics.html
+++ b/Electronics.html
@@ -220,7 +220,7 @@
                     <li>
                         <a href="/Product.html" class=" btn btn__icon  btn--login">Back to Product Page
                             <svg class="  side-nav__icon ">
-                                <use xlink:href="img/sprite.svg#icon-contact"></use>
+                                <use xlink:href="img/sprite.svg#icon-product"></use>
                             </svg>
                             &rarr;
                         </a>
@@ -235,7 +235,7 @@
             <li>
                 <a href="/index.html" class=" btn btn__icon  btn--login">Back to Home Page
                     <svg class="  side-nav__icon ">
-                        <use xlink:href="img/sprite.svg#icon-contact"></use>
+                        <use xlink:href="img/sprite.svg#icon-home"></use>
                     </svg>
                     &rarr;
                 </a>
