--- a/Registration.html
+++ b/Registration.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <div class="container">
+    <div >
         <section class="section-login">
             <div class="page-view">
                 <div class="home-page">
@@ -57,12 +57,12 @@
                                     <input type="radio" class="form__radio-input" id="small" name="size">
                                     <label for="small" class="form__radio-label">
                                         <span class="form__radio-button"></span>
-                                        Small tour group</label>
+                                        Male</label>
 
                                     <input type="radio" class="form__radio-input" id="large" name="size">
                                     <label for="large" class="form__radio-label">
                                         <span class="form__radio-button"></span>
-                                        Large tour group</label>
+                                        Female</label>
                                 </div>
 
                                 <input id="login-here" type="type" class="form__inputt" placeholder="Current City"
@@ -76,7 +76,7 @@
 
 
                             <div class="form__groupp">
-                                <h3 class="l-1 l-2 "><em>Personal Information</em></h3>
+                                <h3 class="l-1 l-2 "><em>Shipping Detail</em></h3>
 
 
                                 <input id="login-here" type="type" class="form__inputt"
@@ -96,7 +96,7 @@
                             <li>
                                 <a href="/index.html" class=" btn btn__icon  btn--login">Back to Home
                                     <svg class="  side-nav__icon ">
-                                        <use xlink:href="img/sprite.svg#icon-contact"></use>
+                                        <use xlink:href="img/sprite.svg#icon-home"></use>
                                     </svg>
                                     &rarr;
                                 </a>
