--- a/Product.html
+++ b/Product.html
@@ -17,12 +17,58 @@
 <body>
 
     <section>
-        <h1 class="heading">maNgo Marketplace
+        <div class="header">
+            <h1 id="go-to-main" class="heading">MaNgo
+                Marketplace
+            </h1>
+            <div class="heading__secondary">
+                <img class="logo" src="./img/logo.jpg" alt="">
+
+                <form action="#" class="search">
+                    <input type="text" class="search__input" placeholder="Search Engine">
+                    <button class="search__button">
+                        <svg class="search__icon">
+                            <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+                        </svg>
+                    </button>
+                    <!-- <p class="logo__text">Welcome to our cash and carry. You can <strong>Buy as well as order</strong> each & -->
+                    <!-- evertything from here.</p> -->
+                </form>
+
+                <!-- side nav -->
+                <nav class="user-nav">
+                    <div class="user-nav__icon-box">
+                        <svg class="user-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-chat"></use>
+                        </svg>
+                        <span class="user-nav__notification">37+</span>
+                    </div>
+
+                    <div class="user-nav__icon-box">
+                        <svg class="user-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-cart"></use>
+                        </svg>
+                        <span class="user-nav__notification">5+</span>
+                    </div>
+
+                    <div class="user-nav__user">
+                        <img src="img/user.jpg" alt="User Photo" class="user-nav__user-photo">
+                        <span class="user-nav__user-name">Ahmad</span>
+                    </div>
+
+
+
+
+                </nav>
+                <!-- <input class="heading__search" type="text" placeholder="search" name="" id=""> -->
+            </div>
+        </div>
+        <!-- <h1 class="heading">maNgo Marketplace
         </h1>
 
         <div>
             <h1 class="page">All Products will be Shown here</h1>
-        </div>
+        </div> -->
         <div>
             <h1 class=" page page__1">Sports Products</h1>
         </div>
@@ -320,7 +366,15 @@
                 &rarr;
             </a>
         </li>
+        
     </section>
+    <footer class="footer">
+        <div class="l">
+            <div class="l-copyright  ">
+                .Copyright &copy; 2023 by <a href="#" class="l__link">Ahmad</a> All Rights are reserverd.
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
