--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
                                     <input type="radio" class="form__radio-input" id="small" name="size">
                                     <label for="small" class="form__radio-label">
                                         <span class="form__radio-button"></span>
-                                        Small tour group</label>
+                                        Male</label>
 
                                     <input type="radio" class="form__radio-input" id="large" name="size">
                                     <label for="large" class="form__radio-label">
                                         <span class="form__radio-button"></span>
-                                        Large tour group</label>
+                                        Female</label>
                                 </div>
 
                                 <input type="text" class="form__input" placeholder="Mobile Number" id="name">
